--- a/en/requirements.txt
+++ b/en/requirements.txt
@@ -1,13 +1,31 @@
-mkdocs==1.0.4
-Pygments==2.7.4
-pymdown-extensions==6.2
-mkdocs-minify-plugin==0.2.1
-mkdocs-markdownextradata-plugin==0.1.1
-mkdocs-redirects==1.0.0
-pathlib==1.0.1
-mkdocs-material==4.5.1
-markdown-include==0.5.1
-markdown==3.1
-mkdocs-redirects==1.0.0
-mkdocs-exclude==1.0.2
-jinja2==3.0.3
+mkdocs-material==9.1.0
+colorama>=0.4
+jinja2>=3.0
+markdown>=3.2
+mkdocs-material-extensions>=1.1
+mkdocs>=1.4.2
+pygments>=2.14
+pymdown-extensions>=9.9.1
+regex>=2022.4.24
+requests>=2.26
+MarkupSafe>=2.0
+click>=7.0
+ghp-import>=1.0
+mergedeep>=1.3.4
+packaging>=20.5
+pyyaml-env-tag>=0.1
+pyyaml>=5.1
+watchdog>=2.0
+charset-normalizer<4,>=2
+idna<4,>=2.5
+urllib3<1.27,>=1.21.1
+certifi>=2017.4.17
+python-dateutil>=2.8.1
+pyparsing!=3.0.5,>=2.0.2
+six>=1.5
+mkdocs-minify-plugin
+mkdocs-markdownextradata-plugin
+mkdocs-redirects
+pathlib
+markdown-include
+mkdocs-exclude
