--- a/en/requirements.txt
+++ b/en/requirements.txt
@@ -1,11 +1,11 @@
 mkdocs-material==9.1.0
 colorama>=0.4
-jinja2>=3.0
-markdown>=3.2
+jinja2>=3.1.2
+markdown>=3.4.1
 mkdocs-material-extensions>=1.1
 mkdocs>=1.4.2
 pygments>=2.14
-pymdown-extensions>=9.9.1
+pymdown-extensions>=9.9.2
 regex>=2022.4.24
 requests>=2.26
 MarkupSafe>=2.0
@@ -23,9 +23,9 @@ certifi>=2017.4.17
 python-dateutil>=2.8.1
 pyparsing!=3.0.5,>=2.0.2
 six>=1.5
-mkdocs-minify-plugin
+mkdocs-minify-plugin==0.6.2
 mkdocs-markdownextradata-plugin
-mkdocs-redirects
-pathlib
-markdown-include
-mkdocs-exclude
+mkdocs-redirects==1.0.0
+pathlib==1.0.1
+markdown-include==0.8.1
+mkdocs-exclude==1.0.2
