--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -1,4 +1,3 @@
-
 # Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 #
 # WSO2 Inc. licenses this file to you under the Apache License,
@@ -16,7 +15,7 @@
 # under the License.
 
 # Project information
-site_name: WSO2 API Platform for Kubernetes Documentation 1.0.0
+site_name: WSO2 APK Documentation 1.0.0
 site_description: Documentation for WSO2 API Platform for Kubernetes
 site_author: WSO2
 site_url: https://apk.docs.wso2.com/en/latest/
@@ -24,7 +23,8 @@ site_url: https://apk.docs.wso2.com/en/latest/
 # Repository
 repo_name: wso2/docs-apk
 repo_url: https://github.com/wso2/docs-apk
-edit_uri: https://github.com/wso2/docs-apk/edit/1.0.0/en/docs/
+# Change the edit_url later when 1.0.0 is released
+edit_uri: https://github.com/wso2/docs-apk/edit/main/en/docs/
 dev_addr: localhost:8000
 
 # Copyright
@@ -33,21 +33,21 @@ copyright: WSO2 API Platform for Kubernetes - Documentation
 # Configuration
 theme:
     name: material
-    #custom_dir: theme/material
-    #palette:
-    #    primary: deep-orange
-    #    accent: deep-orange
-    #logo: images/logo.svg
-    #favicon: images/favicon.png
-    #highlightjs: true
-    #feature:
-        #tabs: true
+    custom_dir: theme/material
+    palette:
+        primary: #808818
+        accent: #b3c53e
+    logo: images/logo.svg
+    favicon: images/favicon.png
+    highlightjs: true
+    feature:
+        tabs: true
     language: 'en'
 #Breaks build if there's a warning
 strict: false
 # Navigation
 nav:
-    - Documentation: index.md
+    - Home: index.md
     - Get Started:
         - Get Started - Overview: get-started/get-started-overview.md
         - Quick Start: get-started/quick-start-guide.md
@@ -103,35 +103,38 @@ nav:
     - Catalogs:
         - API Catalog:
             - Overview - API Catalog: catalogs/api-catalog.md
-            - Gateway APIs: catalogs/api-reference-gateway.md
-            - Back Office APIs: catalogs/api-reference-back-office
+            - Back Office APIs: catalogs/api-reference-back-office.md
             - Runtime APIs: catalogs/api-reference-runtime.md
             - Developer Portal APIs: catalogs/api-reference-developer-portal.md
             - Admin APIs: catalogs/api-reference-admin.md
         - CLI Catalog: catalogs/cli-reference.md
         - CRD Catalog: catalogs/kubernetes-crds.md
-    - References:
-        - Release Notes: release/about-this-release.md
-        - Architecture: release/architecture.md
-        - Product Pitch: https://wso2.com/api-manager
+    - About APK:
+        - What is APK?: about-apk/what-is-apk.md
+        - About This Release: about-apk/about-this-release.md
+        - Architecture: about-apk/architecture.md
         - Key Concepts:
-            - Key Concept1: release/key-concepts/key-concept1.md
-            - Key Concept2: release/key-concepts/key-concept1.md
+            - Key Concept 1: about-apk/key-concepts/key-concept.md
+            - Key Concept 2: about-apk/key-concepts/key-concept.md
         - WSO2 APK Deck:
             - APK Deck Overview: apk-deck/overview.md
-            - Gateway:
-                - Gateway - Overview: apk-deck/gateway-overview.md
-                - APIs: catalogs/api-reference-gateway.md
-                - Topic 1: get-started/dummy.md
-                - Topic 2: get-started/dummy.md
-            - Key Manager:
-                - Key Manager - Overview: get-started/dummy.md
-                - Topic 1: get-started/dummy.md
-                - Topic 2: get-started/dummy.md
+            - API Gateway:
+                - API Gateway - Router:
+                    - Router - Overview: apk-deck/router-overview.md
+                    - Topic 1: get-started/dummy.md
+                    - Topic 2: get-started/dummy.md
+                - API Gateway - Enforcer:
+                    - Enforcer - Overview: apk-deck/enforcer-overview.md
+                    - Topic 1: get-started/dummy.md
+                    - Topic 2: get-started/dummy.md
+            - Identity Platform:
+                - IdP - Overview: apk-deck/identity-platform/idp-overview.md
+                - IdP - Non-production: apk-deck/identity-platform/non-production-idp.md
+                - IdP - Asgadeo: apk-deck/identity-platform/asgadeo-idp.md
+                - IdP - Auth0: apk-deck/identity-platform/auth0-idp.md
             - Back Office: 
                 - Back Office Overview: apk-deck/back-office-overview.md
                 - Access: get-started/dummy.md
-                - APIs: catalogs/api-reference-back-office.md
                 - Topic 1: get-started/dummy.md
                 - Topic 2: get-started/dummy.md
                 - GraphQL: 
@@ -143,21 +146,19 @@ nav:
             - Runtime:
                 - Runtime Overview: apk-deck/runtime-overview.md
                 - Access: get-started/dummy.md
-                - APIs: catalogs/api-reference-runtime.md
                 - Topic 1: get-started/dummy.md
                 - Topic 2: get-started/dummy.md
             - Developer Portal:
                 - Developer Portal - Overview: get-started/dummy.md
                 - Access: get-started/dummy.md
-                - APIs: catalogs/api-reference-developer-portal.md
                 - Topic 1: get-started/dummy.md
                 - Topic 2: get-started/dummy.md
             - Admin Portal:
                 - Admin Portal - Overview: get-started/dummy.md
                 - Access: get-started/dummy.md
-                - APIs: catalogs/api-reference-admin.md
                 - Topic 1: get-started/dummy.md
                 - Topic 2: get-started/dummy.md
+        - Product Pitch: https://wso2.com/api-manager
     - Setup: 
         - Prerequisites: setup/prerequisites.md
         - Install: setup/install.md
@@ -172,15 +173,15 @@ nav:
             - Gateway: 
                 - Customization 1: setup/gateway-customizations.md
                 - Customization 2: setup/gateway-customizations.md
-            - Key Manager:
-                - Customization 1: setup/gateway-customizations.md
-                - Customization 2: setup/gateway-customizations.md
+    - Administration:
+        - Organizations: administration/organizations.md
+        - Test System APIs: administration/postman-tests.md
     - Reach Out:
-        - Support: get-started/dummy.md #https://wso2.com/subscription/#support
         - Community: reachout/community.md # Breif description and links to Discord and Stack OverFlow
+        - Support: https://wso2.com/subscription/#support
         - Report Bugs: get-started/dummy.md # Breif description and links to Git links for doc issues and product issues
-        - Training and Certification: get-started/dummy.md #https://wso2.com/training/
-        - Resources: get-started/dummy.md #https://wso2.com/library/
+        - Training and Certification: https://wso2.com/training/
+        - Resources: https://wso2.com/library/
 
 # Extensions
 markdown_extensions:
@@ -217,23 +218,23 @@ markdown_extensions:
 plugins:
     - search
     #- markdownextradata: {}
-    #- exclude:
-    #      glob:
-    #          - wip/*
+    - exclude:
+          glob:
+              - wip/*
     #- redirects:
     #      redirect_maps:
 
     # Extra
-#extra_css:
-    #- assets/lib/highlightjs/default.min.css
-    #- assets/css/theme.css
-    #- assets/lib/json-formatter/json-formatter.css
-#extra_javascript:
-    #- assets/lib/json-formatter/json-formatter.umd.js
-    #- assets/lib/highlightjs/highlight.min.js
-    #- assets/js/theme.js
-    #- assets/lib/backtotop/js/util.js
-    #- assets/lib/backtotop/js/main.js
+extra_css:
+    - assets/lib/highlightjs/default.min.css
+    - assets/css/theme.css
+    - assets/lib/json-formatter/json-formatter.css
+extra_javascript:
+    - assets/lib/json-formatter/json-formatter.umd.js
+    - assets/lib/highlightjs/highlight.min.js
+    - assets/js/theme.js
+    - assets/lib/backtotop/js/util.js
+    - assets/lib/backtotop/js/main.js
 extra:
     social:
         - type: github
@@ -243,6 +244,6 @@ extra:
         - type: linkedin
           link: https://www.linkedin.com/company/wso2
     site_version: 1.0.0
-    #base_path: http://localhost:8000
-    #base_path: https://apk.docs.wso2.com/en/1.0.0
-    #envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
+    base_path: http://localhost:8000
+    #base_path: https://apk.docs.wso2.com/en/latest
+    envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
