--- a/en/requirements.txt
+++ b/en/requirements.txt
@@ -1,13 +1,13 @@
-Jinja2==3.1.2
-mkdocs==1.4.2
-Pygments==2.14.0
-pymdown-extensions==9.9.2
-mkdocs-minify-plugin==0.6.2
+mkdocs==1.0.4
+Pygments==2.7.4
+pymdown-extensions==6.2
+mkdocs-minify-plugin==0.2.1
 mkdocs-markdownextradata-plugin==0.1.1
 mkdocs-redirects==1.0.0
 pathlib==1.0.1
-mkdocs-material==9.1.0
-markdown-include==0.8.1
-Markdown==3.3.7
+mkdocs-material==4.5.1
+markdown-include==0.5.1
+markdown==3.1
 mkdocs-redirects==1.0.0
 mkdocs-exclude==1.0.2
+jinja2==3.0.3
