--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -217,7 +217,7 @@ markdown_extensions:
     - attr_list
 plugins:
     - search
-    #- markdownextradata: {}
+    - markdownextradata: {}
     - exclude:
           glob:
               - wip/*
