--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -244,6 +244,6 @@ extra:
         - type: linkedin
           link: https://www.linkedin.com/company/wso2
     site_version: 1.0.0
-    base_path: http://localhost:8000
-    #base_path: https://apk.docs.wso2.com/en/latest
+    #base_path: http://localhost:8000
+    base_path: https://apk.docs.wso2.com/en/latest
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
